2013-04-16  Jose Antonio Ortega Ruiz <jao@gnu.org>
	* lisp/sawfish/wm/tile/tiler.jl: make never-tile window-matcher work
	properly, notify user when switching tiling-mode

	* lisp/sawfish/wm/tile/column.jl: #:resize predicate (whether windows
	should be resized to fit into columns)

2013-04-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tile/tiler.jl: fix erroring when destroying last
	tileabe window

2013-04-15  Jose Antonio Ortega Ruiz <jao@gnu.org>
	* lisp/sawfish/wm/tile/tall.jl: #:right predicate (locate
	master-window on the right instead of left), #:master predicate (set
	what window can be the master-window in tall tiling)

2013-04-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/control: make package sawfish depend on rep and rep-gtk

2013-03-30  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/expose.jl: remove. We now have sawfish.wm.tile.*

	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/conf.jl
	* lisp/sawfish/wm/edge/misc.jl
	* lisp/sawfish/wm/tile/tiler.jl
	* lisp/sawfish/wm/tile/utils.jl
	* lisp/sawfish/wm/ext/cabinet.jl: remove all references to sawfish.wm.ext.expose

	* lisp/sawfish/wm/match-window.jl: replace never-expose by never-tile

	* lisp/sawfish/wm/tile/utils.jl: add window-never-expose-p

	* lisp/sawfish/wm/tile/cols.jl: add increase-max-cols, decrease-max-cols,
	  minor fixups in col-tiler

	* lisp/sawfish/wm/tile/tile.jl: export increase-max-cols, decrease-max-cols,
	  window-never-expose-p

	* lisp/sawfish/wm/tile/tall.jl: don't error in tall-rotate-left and
	  tall-rotate-right if there are not enough windows for rotation

	* README: fixed my mail address

	* configure.in: small capitalization string-change

	* man/news.texi: update + changed tiling example.

	* lisp/sawfish/wm/tile/readme.org: update

2013-03-21  Robert Zenz <Bobby@bonsaimind.org>
	* themes/mxflat/theme.jl: Fixed $height-content and
	$width-content not being replaced in title.
