@@ -1,0 +1,73 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>The Sawfish WindowManager</title>
+</head>
+<body>
+
+<div style="text-align:center"><img src="Sawfish.png"></div>
+
+<h2 align="center"><font color="#17A6FF">The Sawfish Project</font></h2>
+
+<h4 align="left"><font color="#6318DA">What is Sawfish?</font></h4>
+Sawfish is an extensible window manager using a Lisp-based scripting language. 
+Its policy is very minimal compared to most window managers. Its aim is simply
+to manage windows in the most flexible and attractive manner possible. All
+high-level WM functions are implemented in Lisp for future extensibility
+or redefinition.<br><br>
+
+<h4 align="center"><font color="#FF0000">We moved our GIT repositories over to GitHub. See below for updated links.</font></h4>
+
+<table align="center" border="0" width="95%">
+  <tr>
+    <td width="49%">
+
+      <img src="community.png"> Community Resources
+      <hr align="left" size="4" width="45%" color="#3EACFF" />
+
+      <img src="wiki.png"> <a href="http://sawfish.wikia.com">Wiki</a>.
+      Our Wiki contains latest information about new releases,<br>
+      <img src="blank.png"> user-guide, themes, scripts, snippets and more usefull content.<br><br>
+
+      <img src="mail.png"> MailingList. New: sawfish[@]lists[.]tuxfamily[.]org <a href="http://listengine.tuxfamily.org/lists.tuxfamily.org/sawfish/">Archive</a> <a href="mailto:sawfish-request@lists.tuxfamily.org?subject=subscribe">Subscribe</a>
+      <br><img src="blank.png"> <b>[Old]</b> sawfish[-]list[@]gnome[.]org <a href="http://mail.gnome.org/archives/sawfish-list/">Archive</a>.<br><br>
+
+      <img src="twitter.png"> <a href="http://www.twitter.com/nanolx">Twitter</a>. The Twitter account of the Sawfish-Maintainer is used to leave<br>
+      <img src="blank.png"> some short news about Sawfish for those, who don't follow the Mailinglist.<br><br>
+
+      <img src="download.png"> Downloads<br>
+      <hr align="left" size="4" width="45%" color="#15C034" />
+      <img src="right.png"> <a href="http://download.tuxfamily.org/sawfish/">Sawfish</a> (<a href="http://download.tuxfamily.org/sawfish/Archive/">Archive</a>) Current: <strong>1.9.1</strong> Beta: <strong>1.9.90</strong><br>
+      <img src="right.png"> <a href="http://download.tuxfamily.org/librep/">Rep</a> (<a href="http://download.tuxfamily.org/librep/Archive/">Archive</a>) Current: <strong>0.92.3</strong><br>
+      <img src="right.png"> <a href="http://download.tuxfamily.org/librep/rep-gtk">Rep-GTK</a> (<a href="http://download.tuxfamily.org/librep/rep-gtk/Archive/">Archive</a>) Current: <strong>0.90.8.1</strong><br>
+      <img src="right.png"> <a href="http://download.tuxfamily.org/sawfishpager/">SawfishPager</a> (<a href="http://download.tuxfamily.org/sawfishpager/Archive/">Archive</a>) Current: <strong>0.90.3</strong><br>
+      <img src="right.png"> <a href="http://download.tuxfamily.org/sawfish/Extras/">SSD</a> (<a href="http://download.tuxfamily.org/sawfish/Extras/Archive/">Archive</a>) Current: <strong>0.40</strong><br><br>
+
+    </td>
+
+    <td width="2%"></td>
+
+    <td width="49%">
+
+      <img src="resources.png"> Development Resources
+      <hr align="left" size="4" width="45%" color="#C915FF" />
+
+      <img src="bugtracker.png"> Bugtracker. <a href="https://github.com/SawfishWM/sawfish/issues">@GitHub</a><br><br>
+
+      <img src="git.png"> GIT Repositories
+      <hr align="left" size="4" width="45%" color="#FFFF29" />
+      <img src="right.png"> Sawfish: <font style="color:#88A228">git://github.com/SawfishWM/sawfish.git</font> (<a href="https://github.com/SawfishWM/sawfish">WebGIT</a>)<br>
+      <img src="right.png"> Rep: <font style="color:#88A228">git://github.com/SawfishWM/librep.git</font> (<a href="https://github.com/SawfishWM/librep">WebGIT</a>)<br>
+      <img src="right.png"> Rep-GTK: <font style="color:#88A228">git://github.com/SawfishWM/rep-gtk.git</font> (<a href="https://github.com/SawfishWM/rep-gtk">WebGIT</a>)<br>
+      <img src="right.png"> SawfishPager: <font style="color:#88A228">git://github.com/SawfishWM/sawfish-pager.git</font> (<a href="https://github.com/SawfishWM/sawfish-pager">WebGIT</a>)<br>
+      <img src="right.png"> SSD: <font style="color:#88A228">git://github.com/SawfishWM/ssd.git</font> (<a href="https://github.com/SawfishWM/ssd">WebGIT</a>)<br><br>
+
+      <img src="docs.png"> Documentation
+      <hr align="left" size="4" width="45%" color="#FF752A" />
+      <img src="right.png"> <a href="sawfish.html">Sawfish</a> documentation<br>
+      <img src="right.png"> <a href="librep.html">Librep</a> documentation<br>
+      <img src="right-red.png"> <a href="http://www.x.org/wiki/DeveloperStart">X.Org</a> documentation<br><br><br><br>
+
+    </td>
+  </tr>
+</table>
