@@ -1,3 +1,12 @@
+2013-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* web/*.{html,png}: add files from http://sawfish.tuxfamily.org/
+
+2013-04-25  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* debian/changelog
+	* configure.in: bump version to 1.9.91 "Steam Train"
+	
+	* man/news.texi: update
+
 2013-04-16  Jose Antonio Ortega Ruiz <jao@gnu.org>
 	* lisp/sawfish/wm/tile/tiler.jl: make never-tile window-matcher work
 	properly, notify user when switching tiling-mode
